--- a/sass/lib/utils/_icons.scss
+++ b/sass/lib/utils/_icons.scss
@@ -1,22 +1,15 @@
-$icons: (
-  gear: '\e601',
-  envelope: '\e602',
-  lab: '\e600',
-  arrow: '\e610',
-  google: '\e603',
-  facebook: '\e604',
-  twitter: '\e605',
-  dribble: '\e606',
-  linkedin: '\e607',
-  menu: '\e60f',
-  drop: '\e60e',
-  plus: '\e608',
-  chevron-left: '\e609',
-  chevron-right: '\e60a',
-  brush: '\e60b',
-  phone: '\e60c',
-  pin: 'e\60d'
-);
+@font-face {
+  font-family: 'ico-fonts';
+  src:url('/css/fonts/ico-fonts.eot?ghgy45');
+  src:url('/css/fonts/ico-fonts.eot?#iefixghgy45') format('embedded-opentype'),
+    url('/css/fonts/ico-fonts.ttf?ghgy45') format('truetype'),
+    url('/css/fonts/ico-fonts.woff?ghgy45') format('woff'),
+    url('/css/fonts/ico-fonts.svg?ghgy45#ico-fonts') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$icons: (gear '\e601') (envelope '\e602') (lab '\e600') (arrow '\e610') (google '\e603') (facebook '\e604') (twitter '\e605') (dribble '\e606') (linkedin '\e607') (menu '\e60f') (drop '\e60e') (plus '\e608') (chevron-left '\e609') (chevron-right '\e60a') (brush '\e60b') (phone '\e60c') (pin 'e\60d');
 
 %icon-fonts {
   font-family: 'ico-fonts';
@@ -32,5 +25,3 @@ $icons: (
     @extend %icon-fonts;
   }
 }
-
-@include font-face('ico-fonts', '/css/fonts/ico-fonts');
