--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,67 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
-body,
-button,
+body {
+  background-color: #ffffff;
+  margin: 0 auto;
+  text-align: center; }
+
+header, article {
+  padding: 2em 1em; }
+  @media screen and (min-width: 50em) {
+    header, article {
+      padding: 0 calc(20% - 7.5em) 6em; } }
+
+button {
+  background-color: #fd6632;
+  border: none; }
+
+button:active, a:active {
+  opacity: 0.8; }
+
+button:hover {
+  cursor: pointer; }
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  opacity: 0.7; }
+
 input,
-textarea,
-a {
+textarea {
+  display: block;
+  background-color: #be4c25;
+  border: none; }
+
+li {
+  list-style-type: none; }
+
+progress[value] {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 1.2em;
+  width: 100%; }
+
+body, button, input, textarea, a {
   font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 1em;
   color: #ffffff; }
 
-input,
-textarea {
+h1 {
+  font-size: 2.125em; }
+
+h2 {
+  font-size: 1.375em; }
+
+h3 {
+  font-size: 1.25em; }
+
+h1, h2, h3, input, textarea {
   font-weight: bold; }
+
+h1, h2, h3 {
+  text-transform: uppercase; }
 
 a {
   text-decoration: none; }
@@ -85,6 +134,144 @@ a {
   font-weight: normal;
   src: url("/css/fonts/ico-fonts.eot?#iefix") format("embedded-opentype"), url("/css/fonts/ico-fonts.woff2") format("woff2"), url("/css/fonts/ico-fonts.woff") format("woff"), url("/css/fonts/ico-fonts.ttf") format("truetype"), url("/css/fonts/ico-fonts.svg#ico-fonts") format("svg"); }
 
+.primary-header-light {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100%; }
+  .primary-header-light h1 {
+    margin: 0 1%;
+    white-space: nowrap; }
+
+.primary-header-dark {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100%; }
+  .primary-header-dark h1 {
+    color: #2e2e2e;
+    margin: 0 1%;
+    white-space: nowrap; }
+
+.secondary-header-light {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100%; }
+  .secondary-header-light h2 {
+    margin: 0 1%;
+    white-space: nowrap; }
+
+.secondary-header-dark {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  box-direction: normal;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100%; }
+  .secondary-header-dark h2 {
+    color: #2e2e2e;
+    margin: 0 1%;
+    white-space: nowrap; }
+
 .bundle {
   min-width: 220px;
   margin-bottom: 1em; }
@@ -129,48 +316,6 @@ a {
     .bundle .button {
       width: auto; } }
 
-body {
-  background-color: #ffffff;
-  margin: 0 auto;
-  text-align: center; }
-
-header, article {
-  padding: 2em 1em; }
-  @media screen and (min-width: 50em) {
-    header, article {
-      padding: 0 calc(20% - 7.5em) 6em; } }
-
-button {
-  background-color: #fd6632;
-  border: none; }
-
-button:active, a:active {
-  opacity: 0.8; }
-
-button:hover {
-  cursor: pointer; }
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  opacity: 0.7; }
-
-input,
-textarea {
-  display: block;
-  background-color: #be4c25;
-  border: none; }
-
-li {
-  list-style-type: none; }
-
-progress[value] {
-  -webkit-appearance: none;
-  appearance: none;
-  height: 1.2em;
-  width: 100%; }
-
 /*
 MODIFIERS
 */
@@ -180,31 +325,6 @@ MODIFIERS
 /*
 SECTION HEADERS
 */
-.primary-header-light, .primary-header-dark {
-  display: inline-block;
-  margin: 1.1em 0.3em;
-  font-size: 2.125em;
-  font-weight: bold;
-  text-transform: uppercase; }
-
-.primary-header-light {
-  color: #ffffff; }
-
-.primary-header-dark {
-  color: #2e2e2e; }
-
-.header-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  width: 100%; }
-
 @media screen and (min-width: 50em) {
   .section-arrows-white:before,
   .section-arrows-orange:before,
@@ -317,55 +437,15 @@ SERVICES COMPONENTS
   border-radius: 50%; }
 
 @media screen and (min-width: 50em) {
-  .services-category-container {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-    -webkit-align-content: center;
-    align-content: center; }
   .services-category {
     width: 33%; } }
 
 /*
 BUNDLE SECTION DISPLAY FLEX
 */
-@media screen and (min-width: 50em) {
-  .pricing {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-    -webkit-align-content: center;
-    align-content: center; } }
-
 /*
 PORTFOLIO SECTION
 */
-.portfolio-container {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-align-items: center;
-  align-items: center; }
-
-@media screen and (min-width: 50em) {
-  .portfolio-container {
-    position: relative;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: space-around;
-    justify-content: space-around; } }
-
 /*
 PORTFOLIO SLIDER
 */
@@ -457,12 +537,6 @@ PORTFOLIO NAVIGATION
 
 @media screen and (min-width: 50em) {
   [title="portfolio navigation"] {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-basis: 100%;
-    flex-basis: 100%;
-    -webkit-justify-content: center;
-    justify-content: center;
     margin-top: 1em;
     margin-bottom: 1.777em; }
   [title="portfolio-categories"] li {
@@ -511,7 +585,7 @@ PORTFOLIO ITEMS
 /*
 ABOUT
 */
-.about, .about p {
+.about p {
   color: #b9bdbf; }
 
 .about {
@@ -522,10 +596,6 @@ ABOUT
   display: inline-block;
   line-height: 1.5em;
   margin-bottom: 1em; }
-
-.skills-header {
-  font-size: 1.7em;
-  margin-bottom: 0.8em; }
 
 .skills li {
   margin-bottom: 1em; }
@@ -559,9 +629,6 @@ progress[value]::-webkit-progress-value {
     margin-bottom: 6em; }
   .skills {
     margin-bottom: 6em; }
-  .skills-header {
-    margin: 0 19.25% 1.5em;
-    background-size: calc(50% - 2.25em); }
   .skills li {
     margin-bottom: 1.4em; }
   progress[value] {
@@ -572,18 +639,8 @@ progress[value]::-webkit-progress-value {
 /*
 TEAM
 */
-.team, .clients {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
 .team {
-  position: relative;
-  -webkit-justify-content: space-around;
-  justify-content: space-around; }
+  position: relative; }
 
 .team-profile, .social-icons li {
   display: inline-block; }
@@ -643,7 +700,6 @@ TEAM
   -webkit-box-align: center;
   -webkit-align-items: center;
   align-items: center;
-  min-width: 20em;
   margin-top: 1em; }
 
 .client-figure {
@@ -677,14 +733,6 @@ TEAM
     margin-bottom: 3em; }
   .social-icons a {
     font-size: 1em; }
-  .client-figure {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    margin: 1em 0; }
   .client-image {
     margin-right: 2vw; }
   .client-header {
@@ -698,12 +746,6 @@ TEAM
 CONTACT SECTION
 */
 .contact-section {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-align-items: center;
-  align-items: center;
   background-color: #fd6632; }
 
 .contact-text {
@@ -785,15 +827,7 @@ input[type="submit"] {
   input, textarea, .contact-map-caption {
     font-size: .8em; }
   .contact-section {
-    position: relative;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: space-around;
-    justify-content: space-around; }
+    position: relative; }
   input[type="submit"] {
     margin-left: calc(100% - 155px); }
   .contact-form {
@@ -937,7 +971,16 @@ MEDIA SCREEN MODIFIERS
   -webkit-flex-wrap: wrap;
   -moz-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  -webkit-box-pack: distribute;
+  -moz-box-pack: distribute;
+  box-pack: distribute;
+  -webkit-justify-content: space-around;
+  -moz-justify-content: space-around;
+  -ms-justify-content: space-around;
+  -o-justify-content: space-around;
+  justify-content: space-around;
+  -ms-flex-pack: distribute; }
 
 .clients {
   display: -webkit-box;
@@ -975,11 +1018,31 @@ MEDIA SCREEN MODIFIERS
   -o-justify-content: space-between;
   justify-content: space-between;
   -ms-flex-pack: justify;
-  min-width: 20em;
   margin-top: 1em; }
 
 .client-figure {
   margin: 1em 0; }
+  @media screen and (min-width: 50em) {
+    .client-figure {
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      box-align: center;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      -ms-align-items: center;
+      -o-align-items: center;
+      align-items: center;
+      -ms-flex-align: center;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      box-direction: normal; } }
 
 #contact {
   display: -webkit-box;
