--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -13,3 +13,54 @@ $secondary_font_color: #2e2e2e;
 $tertiary_font_color: #7c8387;
 
 $href_hover: #de592c;
+
+body {
+  background-color: $background;
+  margin: 0 auto;
+  text-align: center;
+}
+
+header, article {
+  padding: 2em 1em;
+  @media screen and (min-width: 50em) {
+    padding: 0 calc(20% - 7.5em) 6em;
+  }
+}
+
+button {
+  background-color: #fd6632;
+  border: none;
+}
+
+button:active, a:active {
+  opacity: 0.8;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  opacity: 0.7;
+}
+
+input,
+textarea {
+  display: block;
+  background-color: #be4c25;
+  border: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+progress[value] {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 1.2em;
+  width: 100%;
+}
