--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,62 +1,13 @@
-@import "config";
 @import "reset";
 @import "../node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets/bourbon";
 @import "color/color";
+@import "config";
 @import "typography";
 @import "lib/utils/icons";
+@import "lib/utils/flexbox";
+@import "components/headers";
 @import "components/bundle";
 
-
-body {
-  background-color: $background;
-  margin: 0 auto;
-  text-align: center;
-}
-
-header, article {
-  padding: 2em 1em;
-  @media screen and (min-width: 50em) {
-    padding: 0 calc(20% - 7.5em) 6em;
-  }
-}
-
-button {
-  background-color: #fd6632;
-  border: none;
-}
-
-button:active, a:active {
-  opacity: 0.8;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  opacity: 0.7;
-}
-
-input,
-textarea {
-  display: block;
-  background-color: #be4c25;
-  border: none;
-}
-
-li {
-  list-style-type: none;
-}
-
-progress[value] {
-  -webkit-appearance: none;
-  appearance: none;
-  height: 1.2em;
-  width: 100%;
-}
 
 /*
 MODIFIERS
@@ -73,24 +24,6 @@ MODIFIERS
 /*
 SECTION HEADERS
 */
-
-%primary-header {
-  display: inline-block;
-  margin: 1.1em 0.3em;
-  font-size: em($heading_1);
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.primary-header-light {
-  @extend %primary-header;
-  color: $primary_font_color;
-}
-
-.primary-header-dark {
-  @extend %primary-header;
-  color: $secondary_font_color;
-}
 
 // .services-header {
 //   @extend %section-header;
@@ -116,20 +49,6 @@ SECTION HEADERS
 //   @extend %section-header;
 //   color: $canvas;
 // }
-
-.header-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  width: 100%;
-}
-
 
 // .team-section-header,
 // .client-section-header,
@@ -326,16 +245,16 @@ SERVICES COMPONENTS
 }
 
 @media screen and (min-width: 50em) {
-  .services-category-container {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-    -webkit-align-content: center;
-    align-content: center;
-  }
+  // .services-category-container {
+  //   display: -webkit-flex;
+  //   display: flex;
+  //   -webkit-flex-wrap: wrap;
+  //   flex-wrap: wrap;
+  //   -webkit-justify-content: space-around;
+  //   justify-content: space-around;
+  //   -webkit-align-content: center;
+  //   align-content: center;
+  // }
 
   .services-category {
     width: 33%;
@@ -347,16 +266,16 @@ BUNDLE SECTION DISPLAY FLEX
 */
 
 @media screen and (min-width: 50em) {
-  .pricing {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-    -webkit-align-content: center;
-    align-content: center;
-  }
+  // .pricing {
+  //   display: -webkit-flex;
+  //   display: flex;
+  //   -webkit-flex-wrap: wrap;
+  //   flex-wrap: wrap;
+  //   -webkit-justify-content: space-between;
+  //   justify-content: space-between;
+  //   -webkit-align-content: center;
+  //   align-content: center;
+  // }
 }
 
 /*
@@ -364,12 +283,12 @@ PORTFOLIO SECTION
 */
 
 .portfolio-container {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-align-items: center;
-  align-items: center;
+  // display: -webkit-flex;
+  // display: flex;
+  // -webkit-flex-direction: column;
+  // flex-direction: column;
+  // -webkit-align-items: center;
+  // align-items: center;
   // max-width: 68em;
   // padding: 3.5em 0 0;
   // margin: 0 auto;
@@ -390,18 +309,18 @@ PORTFOLIO SECTION
   //   background-size: calc(100% - 11.5em);
   // }
 
-  .portfolio-container {
-    position: relative;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-    // padding-top: 0;
-  }
+  // .portfolio-container {
+  //   position: relative;
+  //   -webkit-flex-direction: row;
+  //   flex-direction: row;
+  //   -webkit-flex-wrap: wrap;
+  //   flex-wrap: wrap;
+  //   -webkit-align-items: center;
+  //   align-items: center;
+  //   -webkit-justify-content: space-around;
+  //   justify-content: space-around;
+  //   // padding-top: 0;
+  // }
 }
 
 
@@ -534,12 +453,12 @@ PORTFOLIO NAVIGATION
 
 
   [title="portfolio navigation"] {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-basis: 100%;
-    flex-basis: 100%;
-    -webkit-justify-content: center;
-    justify-content: center;
+    // display: -webkit-flex;
+    // display: flex;
+    // -webkit-flex-basis: 100%;
+    // flex-basis: 100%;
+    // -webkit-justify-content: center;
+    // justify-content: center;
     margin-top: 1em;
     margin-bottom: 1.777em;
   }
@@ -605,7 +524,7 @@ PORTFOLIO ITEMS
 ABOUT
 */
 
-.about, .about p {
+.about p {
   color: #b9bdbf;
 }
 
@@ -631,10 +550,10 @@ ABOUT
   margin-bottom: 1em;
 }
 
-.skills-header {
-  font-size: 1.7em;
-  margin-bottom: 0.8em;
-}
+// .skills-header {
+//   font-size: 1.7em;
+//   margin-bottom: 0.8em;
+// }
 
 .skills li {
   margin-bottom: 1em;
@@ -688,10 +607,10 @@ progress[value]::-webkit-progress-value {
     margin-bottom: 6em;
   }
 
-  .skills-header {
-    margin: 0 19.25% 1.5em;
-    background-size: calc(50% - 2.25em);
-  }
+  // .skills-header {
+  //   margin: 0 19.25% 1.5em;
+  //   background-size: calc(50% - 2.25em);
+  // }
 
   .skills li {
     margin-bottom: 1.4em;
@@ -710,19 +629,19 @@ progress[value]::-webkit-progress-value {
 TEAM
 */
 
-.team, .clients {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
+// .team, .clients {
+//   display: -webkit-box;
+//   display: -webkit-flex;
+//   display: flex;
+//   -webkit-flex-wrap: wrap;
+//   -ms-flex-wrap: wrap;
+//   flex-wrap: wrap;
+// }
 
 .team {
   position: relative;
-  -webkit-justify-content: space-around;
-  justify-content: space-around;
+  // -webkit-justify-content: space-around;
+  // justify-content: space-around;
   // padding-top: 2.5em;
 }
 
@@ -807,7 +726,7 @@ TEAM
   -webkit-box-align: center;
   -webkit-align-items: center;
   align-items: center;
-  min-width: 20em;
+  // min-width: 20em;
   margin-top: 1em;
 }
 
@@ -822,8 +741,7 @@ TEAM
 }
 
 .client-header {
-  color: $secondary_font_color
-;
+  color: $secondary_font_color;
   margin: 0.7em 0;
 }
 
@@ -869,15 +787,15 @@ TEAM
   //   background-size: calc(50% - 2.5em);
   // }
 
-  .client-figure {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    margin: 1em 0;
-  }
+  // .client-figure {
+  //   display: -webkit-box;
+  //   display: -webkit-flex;
+  //   display: flex;
+  //   -webkit-box-align: center;
+  //   -webkit-align-items: center;
+  //   align-items: center;
+  //   margin: 1em 0;
+  // }
 
   .client-image {
     margin-right: 2vw;
@@ -902,12 +820,12 @@ CONTACT SECTION
 */
 
 .contact-section {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-align-items: center;
-  align-items: center;
+  // display: -webkit-flex;
+  // display: flex;
+  // -webkit-flex-direction: column;
+  // flex-direction: column;
+  // -webkit-align-items: center;
+  // align-items: center;
   // margin: 0 auto;
   // padding: 2.5em .3em 2em;
   background-color: #fd6632;
@@ -1016,14 +934,14 @@ input[type="submit"]  {
 
   .contact-section {
     position: relative;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
+    // -webkit-flex-direction: row;
+    // flex-direction: row;
+    // -webkit-flex-wrap: wrap;
+    // flex-wrap: wrap;
+    // -webkit-align-items: center;
+    // align-items: center;
+    // -webkit-justify-content: space-around;
+    // justify-content: space-around;
     // padding-top: 2em;
   }
 
@@ -1117,41 +1035,33 @@ MEDIA SCREEN MODIFIERS
   // }
 }
 
-@mixin flex($wrap:null, $direction:null, $justify:null) {
-  @include display(flex);
-  @include align-items(center);
-  @include flex-direction($direction);
-  @include flex-wrap($wrap);
-  @include justify-content($justify);
-}
-
 #portfolio {
-  @include flex($direction: column, $justify: space-around);
+  @include flexbox($direction: column, $justify: space-around);
   @media screen and (min-width: 50em) {
-    @include flex($wrap: wrap, $direction: row);
+    @include flexbox($wrap: wrap, $direction: row);
   }
 }
 
 #team {
-  @include flex($wrap: wrap);
+  @include flexbox($wrap: wrap, $justify: space-around);
 }
 
 .clients {
-  @include flex($wrap: wrap, $justify: space-between);
-  min-width: 20em;
+  @include flexbox($wrap: wrap, $justify: space-between);
+  // min-width: 20em;
   margin-top: 1em;
 }
 
 .client-figure {
   margin: 1em 0;
   @media screen and (min-width: 50em) {
-    @extend %flex-center;
+    @include flexbox;
   }
 }
 
 #contact {
-  @include flex($direction: column);
+  @include flexbox($direction: column);
   @media screen and (min-width: 50em) {
-    @include flex($wrap: wrap, $direction: row, $justify: space-between);
+    @include flexbox($wrap: wrap, $direction: row, $justify: space-between);
   }
 }
