--- a/sass/color/_color.scss
+++ b/sass/color/_color.scss
@@ -6,7 +6,7 @@ $theme_1_dark: #7e3319 !default;
 $theme_1: #be4c25 !default;
 $theme_2: #7c8387 !default;
 $theme_2_light: #d4d4d4 !default;
-$theme_2_darker: #b9bdbf !default;
+$theme_2_darker: #3a3a3a !default;
 
 $facebook_color: #305fc6;
 $twitter_color: #32bdff;
