Update the portfolio slider and contact form

--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,3 +1,6 @@
 @import "bundle";
 @import "download-button";
 @import "slider";
+@import "portfolio-nav";
+@import "portfolio-items";
+@import "contact-form"
