--- a/sass/lib/utils/_icons.scss
+++ b/sass/lib/utils/_icons.scss
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'ico-fonts';
+  src:url('/css/fonts/ico-fonts.eot?ghgy45');
+  src:url('/css/fonts/ico-fonts.eot?#iefixghgy45') format('embedded-opentype'),
+    url('/css/fonts/ico-fonts.ttf?ghgy45') format('truetype'),
+    url('/css/fonts/ico-fonts.woff?ghgy45') format('woff'),
+    url('/css/fonts/ico-fonts.svg?ghgy45#ico-fonts') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 $icons: (
   gear: '\e601',
   envelope: '\e602',
