adjust the opaque down arrow below the header

--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,6 +1,8 @@
+@import "section-arrows";
 @import "bundle";
 @import "download-button";
 @import "slider";
 @import "portfolio-nav";
 @import "portfolio-items";
-@import "contact-form"
+@import "contact-form";
+@import "contact-map";
