--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -9,7 +9,7 @@
 .contact-form {
   input {
     @include placeholder {
-      font-family: "helvetica neue", arial, sans-serif;
+      font-family: $primary_font_family;
       color: $primary_font_color;
       letter-spacing: .1em;
     }
@@ -18,6 +18,15 @@
   input[type="email"],
   textarea {
     @extend %input-styles;
+  }
+
+  @media screen and (min-width: 50em) {
+    input[type="submit"] {
+      margin-left: calc(100% - 155px);
+    }
+    input, textarea, .contact-map-caption {
+      font-size: em($font_smallest);
+    }
   }
 }
 
@@ -28,3 +37,4 @@ input.form-submit {
     border: none;
     background-color: $background;
 }
+
