Refactor team profile section with Sass

--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,5 +1,7 @@
 @import "headers";
 @import "social-icons";
+@import "team-profile";
+@import "client-profile";
 @import "bundle";
 @import "download-button";
 @import "slider";
