--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,6 +1,8 @@
 @import "headers";
+@import "header-logo";
 @import "social-icons";
 @import "section-arrows";
+@import "service-description";
 @import "bundle";
 @import "download-button";
 @import "slider";
