--- a/sass/components/_section-arrows.scss
+++ b/sass/components/_section-arrows.scss
@@ -29,3 +29,11 @@
   background: url(/img/header-background.jpg) bottom;
   -webkit-mask: url("/img/triangle-white.svg") no-repeat;
 }
+
+.section-arrows-opaque:after {
+  @extend %section-arrows;
+  background: url("/img/triangle-opaque.svg") no-repeat;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
