--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,9 @@
 @import "color/color";
 @import "config";
 @import "typography";
-@import "layout";
 @import "lib/utils/flexbox";
 @import "lib/utils/icons";
+@import "layout";
 @import "components/index";
 
 /*
@@ -160,78 +160,30 @@ MENU
 HEADER & LOGO
 */
 
-.header-content {
-  // padding: 3em 0;
-  position: relative;
-  background-size: cover;
-  background-image: url(/img/header-background.jpg);
-}
-
-// .header-content:after {
-//   content: "";
-//   margin-top: 5em;
-//   width: 180px;
-//   height: 145px;
-//   border-radius: 10%;
-//   background-color: red;
-//   transform: rotate(-26deg) skewX(38deg);
-// }
-
-.logo {
-  opacity: 1;
-  height: 4em;
-  width: 4em;
-  margin: 1em auto 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  background: #fd6632;
-}
-
-.header-logo-text {
-  color: $secondary_font_color;
-  font-weight: lighter;
-  text-transform: none;
-}
-
-.header-logo-text strong {
-  font-weight: normal;
-  line-height: 1.3;
-}
-
-.curve-underline {
-  padding-bottom: .1em;
-  background-size: cover;
-  background: url("/img/orange-underline.svg") no-repeat;
-  background-position: bottom;
-}
-
-@media screen and (min-width: 50em) {
-  // h1 {
-  //   font-size: 2.666em;
-  // }
-}
 
 
 /*
 SERVICES COMPONENTS
 */
 
-.services-container {
-  position: relative;
-  // padding: 2.5em .5em 1em;
-  // text-align: center;
-  background-color: #fd6632;
-}
 
-.services-text,
-.contact-text {
-  display: inline-block;
-  line-height: 1.4;
-}
 
-.services-category {
-  padding: 1.333em;
-}
+
+
+
+
+
+// .services-text,
+// .contact-text {
+//   display: inline-block;
+//   line-height: 1.4;
+// }
+
+// .services-category-container {
+//   .services-category {
+//     display: inline-block;
+//   }
+// }
 
 // .services-header {
 //   min-width: 225px;
@@ -239,34 +191,41 @@ SERVICES COMPONENTS
 //   font-size: 2.369em
 // }
 
-[data-title="ux-design"]:after {
-  content: "\e60b";
-}
 
-[data-title="laboratory"]:after {
-  content: "\e600";
-}
 
-[data-title="development"]:after {
-  content: "\e601";
-}
+// .services-category {
+//   [data-title="ux-design"]:after {
+//   content: "\e60b";
+//   }
 
-.services-header:after {
-  display: block;
-  width: 2em;
-  height: 2em;
-  margin: .4em auto 0;
-  padding-top: .5em;
-  padding-bottom: .5em;
-  font-family: 'ico-fonts';
-  font-size: 2em;
-  // text-align: center;
-  color: $secondary_font_color;
-  background-color: #fff;
-  border-radius: 50%;
-}
+//   [data-title="laboratory"]:after {
+//     content: "\e600";
+//   }
 
-@media screen and (min-width: 50em) {
+//   [data-title="development"]:after {
+//     content: "\e601";
+//   }
+//   .services-header:after {
+//     display: block;
+//     width: 2em;
+//     height: 2em;
+//     margin: .4em auto 0;
+//     padding-top: .5em;
+//     padding-bottom: .5em;
+//     font-family: 'ico-fonts';
+//     font-size: 2em;
+//     color: $secondary_font_color;
+//     background-color: #fff;
+//     border-radius: 50%;
+//   }
+//   @media screen and (min-width: 50em) {
+//     &.services-category {
+//       width: 33%;
+//     }
+//   }
+// }
+
+// @media screen and (min-width: 50em) {
   // .services-category-container {
   //   display: -webkit-flex;
   //   display: flex;
@@ -278,10 +237,10 @@ SERVICES COMPONENTS
   //   align-content: center;
   // }
 
-  .services-category {
-    width: 33%;
-  }
-}
+//   .services-category {
+//     width: 33%;
+//   }
+// }
 
 /*
 BUNDLE SECTION DISPLAY FLEX
@@ -730,9 +689,9 @@ MEDIA SCREEN MODIFIERS
   //   padding: 0 calc(20% - 7.5em) 6em;
   // }
 
-  .small-paragraph {
-    width: 45%;
-  }
+  // .small-paragraph {
+  //   width: 45%;
+  // }
 
   // .team-section-header,
   // .client-section-header,
