--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,4 +1,8 @@
-.contact {
+.header-content {
+
+}
+
+.contact-section {
   background-color: $theme_1_light;
   .contact-text,
   .contact-form {
@@ -9,6 +13,38 @@
     .contact-text,
     .contact-form {
       margin-bottom: 0;
+    }
+  }
+}
+
+.services-container {
+  position: relative;
+  background-color: #fd6632;
+  .services-intro {
+    @media screen and (min-width: 50em) {
+      margin-bottom: 2em;
+    }
+  }
+  .services-text {
+    display: inline-block;
+    margin: .5em 0;
+    padding: 0 .5em;
+    @media screen and (min-width: 50em) {
+      width: 49.5%;
+    }
+  }
+  .services-category-container {
+    @media screen and (min-width: 50em) {
+      margin-top: 2em;
+     @include flexbox($justify: space-between);
+    }
+  }
+  .services-category {
+    margin: 1.5em 0;
+    @media screen and (min-width: 50em) {
+      margin-left: auto;
+      margin-right: auto;
+      width: 30%;
     }
   }
 }
