Refactor skills component with Sass

--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -2,6 +2,7 @@
 @import "header-logo";
 @import "social-icons";
 @import "section-arrows";
+@import "skills";
 @import "team-profile";
 @import "client-profile";
 @import "service-description";
