--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -15,5 +15,8 @@
     .team-profiles-container {
       margin-bottom: 4.5em;
     }
+    .client-container {
+      margin-bottom: 2em;
+    }
   }
 }
