Refactor aside component with Sass

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -27,6 +27,10 @@ header, article {
   }
 }
 
+article {
+  position: relative;
+}
+
 // button {
 //   background-color: #fd6632;
 //   border: none;
