--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -2,11 +2,12 @@
 @import "header-logo";
 @import "social-icons";
 @import "section-arrows";
+@import "bundle";
 @import "skills";
+@import "aside";
 @import "team-profile";
 @import "client-profile";
 @import "service-description";
-@import "bundle";
 @import "download-button";
 @import "slider";
 @import "portfolio-nav";
