--- a/sass/components/_bundle.scss
+++ b/sass/components/_bundle.scss
@@ -20,8 +20,11 @@ $cell-padding: 1em;
     &.bundle-plan {
       color: $theme_1_light;
     }
+    & span {
+      text-transform: uppercase;
+    }
   }
-  span {
+  .bundle-price {
     font-size: em($heading_3);
     font-weight: bold;
   }
@@ -53,7 +56,8 @@ $cell-padding: 1em;
   .bundle {
     width: 24%;
     .button {
-      width: auto;
+      width: 70%;
+      margin: 0 auto;
     }
   }
 }
