--- a/sass/components/_download-button.scss
+++ b/sass/components/_download-button.scss
@@ -5,6 +5,7 @@ $download-button-size: em($font-size);
   padding: .8em 1em;
   font-size: $download-button-size  * .5;
   color: $primary_font_color;
+  text-transform: uppercase;
   @include linear-gradient(#4dbff7, #5087c8);
   &:hover {
     @include linear-gradient(#5087c8, #4dbff7);
