--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,9 +1,30 @@
-.about > aside {
-  margin-bottom: 1em;
+.about-container {
+  background-color: #252629;
+  > .header-container {
+    margin-bottom: 1em;
+  }
+  .about-text {
+    display: inline-block;
+    margin-bottom: 1em;
+  }
+  .skills-container {
+    margin-bottom: 1.5em;
+  }
+  aside {
+    margin-bottom: 1em;
+  }
+  @media screen and (min-width: 50em) {
+    .about-text {
+      width: 47.5%;
+      margin: 0 0.5em 6em;
+    }
+    .skills-container {
+      margin-bottom: 5em;
+    }
+  }
 }
 
-@media screen and (min-width: 50em) {
-  .skills-container {
-    margin-bottom: 6em;
-  }
+.about-text {
+  font-size: em($font_small);
+  color: #b9bdbf;
 }
