edit the style of the main menu

--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -21,6 +21,7 @@
   }
 
   @media screen and (min-width: 50em) {
+    width: 49%;
     input[type="submit"] {
       margin-left: calc(100% - 155px);
     }
