--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -1,5 +1,6 @@
 .header-content {
   position: relative;
+  padding-top: 3em;
   background-size: cover;
   background-image: url(/img/header-background.jpg);
   .logo {
