--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -29,6 +29,9 @@
     font-weight: normal;
     line-height: 1.3;
   }
+  @media screen and (min-width: 50em) {
+    font-size: em(40);
+  }
 }
 
 .curve-underline {
